--- a/views/abc.pug
+++ b/views/abc.pug
@@ -10,7 +10,7 @@ block content
 	    value=10
     )
     br
-    label(for="latitude") Cordenada X:
+    label(for="latitude") Coordenada X:
     input(
       	type="text"
       	id="latitude"
@@ -18,7 +18,7 @@ block content
 	    value=10
     )
     br
-    label(for="longitude") Cordenada Y:
+    label(for="longitude") Coordenada Y:
     input(
       	type="text"
       	id="longitude"
