--- a/views/form.pug
+++ b/views/form.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   -data = data || {}
-  a(href='points') cordenadas cadastradas
+  a(href='points') coordenadas cadastradas
   if errors
     ul
       for error in errors
@@ -14,23 +14,20 @@ block content
       	type="text"
       	id="name"
       	name="name"
-	    value=10
     )
     br
-    label(for="x") Cordenada X:
+    label(for="x") Coordenada X:
     input(
       	type="text"
       	id="latitude"
       	name="latitude"
-	    value=10
     )
     br
-    label(for="y") Cordenada Y:
+    label(for="y") Coordenada Y:
     input(
       	type="text"
       	id="longitude"
       	name="longitude"
-	    value=1
     )
     input(type="submit" value="cadastrar")
 
